# Image2ppt

./: .gitignore  Image2ppt.sln  LICENSE  UpgradeLog.htm  image2ppt.bat  pyproject.toml  requirements.txt
.github/workflows/: python-test.yml
Image2ppt/: Image2ppt.py  Image2ppt.pyproj  Image2pptTest.py
Image2ppt/Input/: test.pptx  test2.pptx  test4.pptx
Image2ppt/Input/2nd/: test.pptx
Image2ppt/Output/: test.pptx
Image2ppt/source/: conf.py  index.rst  test_src.rst
Image2ppt/src/: Components.py  Controller.py  Image2ppt.py  Image2ppt.pyproj  Image2ppt.py~HEAD  MVC.py  Model.py  View.py  config.json  main.py  main.spec
Image2ppt/test_src/: Image2pptTest.py
